[project]
name = "spell-check"
version = "0.1.0"
tags = ["text", "transformation", "single-turn", "xml"]
license = "Apache-2.0"
description = "Correct spelling for a given word; evaluated by weighted Levenshtein distance between the parsed string and ground-truth string."
dependencies = [
    "verifiers>=0.1.5.post0",
    "datasets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["spell_check.py"]
